tree-sitter-usfm3/grammar.js
    bookcode: $ => /\w{3}/,
     // bookcode: $ => choice("GEN", "EXO", "LEV", "NUM", "DEU", "JOS", "JDG",
     //          "RUT", "1SA", "2SA", "1KI", "2KI", 
     //          "1CH", "2CH", "EZR", "NEH", "EST", "JOB", "PSA", "PRO", 
     //          "ECC", "SNG", "ISA", "JER", "LAM", "EZK", "DAN", 
     //          "HOS", "JOL", "AMO", "OBA", "JON", "MIC", "NAM", "HAB", 
     //          "ZEP", "HAG", "ZEC", "MAL", "MAT", "MRK", "LUK", 
     //          "JHN", "ACT", "ROM", "1CO", "2CO", "GAL", "EPH", "PHP", 
     //          "COL", "1TH", "2TH", "1TI", "2TI", "TIT", "PHM", 
     //          "HEB", "JAS", "1PE", "2PE", "1JN", "2JN", "3JN", "JUD", 
     //          "REV", "TOB", "JDT", "ESG", "WIS", "SIR", "BAR", 
     //          "LJE", "S3Y", "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", 
     //          "1ES", "2ES", "MAN", "PS2", "ODA", "PSS", "EZA", 
     //          "5EZ", "6EZ", "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", 
     //          "1MQ", "2MQ", "3MQ", "REP", "4BA", "LAO", "FRT", 
     //          "BAK", "OTH", "INT", "CNC", "GLO", "TDX", "NDX", "TOB",
     //          "JDT", "ESG", "WIS", "SIR", "BAR", "LJE", "S3Y", 
     //          "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", "1ES", "2ES", 
     //          "MAN", "PS2", "ODA", "PSS", "EZA", "5EZ", "6EZ", 
     //          "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", "1MQ", "2MQ", 
     //          "3MQ", "REP", "4BA", "LAO", "FRT", "BAK", "OTH", 
     //          "INT", "CNC", "GLO", "TDX", "NDX", "XXA", "XXB", "XXC", 
     //          "XXD", "XXE", "XXF", "XXG"),
    text: $ => /[^\\\|]+/,
    _text: $ => /[^\\\|]+/,
    _spaceOrLine: $ => /[\s\n\r]/,

    // File Identification
    book: $ => $.id, //only at start of file
    description: $ => $._text,
    id: $ => prec.right(0, seq("\\id ", $.bookcode, optional($.description))),

    //numbered marker levels
    numberedLevelMax3: $ => token.immediate(/[123]/),
    _headingText: $ => repeat1(choice($.text,
      $._characterMarker,
      $.ref,
      $.footnote,
      $.crossref,
      $.fig,
      )),


    usfm: $ => seq("\\usfm ", $.versionNumber),
    ide: $ => seq("\\ide ", $.text),
    hBlock: $ => prec.right(0,repeat1($.h)),
    tocBlock: $ => prec.right(0,repeat1($.toc)),
    tocaBlock: $ =>prec.right(0, repeat1($.toca)),//only under some hmarkers
    h: $ => prec.right(0,seq($.hTag, $._headingText)),
    hTag: $ => seq("\\h",optional($.numberedLevelMaxAny), " "),
    toc: $ => prec.right(0,seq($.tocTag, $._headingText)),
    tocTag: $ => seq("\\toc",optional($.numberedLevelMax3), " "),
    toca: $ => prec.right(0,seq($.tocaTag, $._headingText)),
    tocaTag: $ => seq("\\toca",optional($.numberedLevelMax3), " "),

    // Remarks and Comments
    rem: $ => prec.right(0, seq("\\rem ", repeat1(choice($.text, $._characterMarker)))), // can be present at any position in file.
    verseText: $ => prec.right(0, repeat1(choice($.text,
      $._characterMarker, $.fig
      ))),
    v: $ => prec.right(0,seq("\\v ", $.verseNumber, repeat($._verseMeta))),
    verseNumber: $ => /\d+\w?(-\d+\w?)?[\s\n\r]*/,

    _verseMeta: $ => choice(
      $.va,
      $.vp,
    ),
    va: $ => seq("\\va ", $.verseNumber, "\\va*", $._spaceOrLine),
    vp: $ => seq("\\vp ", $.text, "\\vp*", $._spaceOrLine),

    // chapter and contents
    chapter: $ => prec.right(0,seq(
        optional($.cl),
        $.c,
        repeat($._chapterContent)
      )),
    c: $ => prec.right(0,seq("\\c ", $.chapterNumber, repeat($._chapterMeta))),
    chapterNumber: $ => /\d+/,

    // When vid is independent marker and not attribute in USFM
    _chapterContent: $ => choice(
      $._chapterMeta,
      $.title,
      $.paragraph,
      $._comments,
      $.poetry,
      $.table,
      $.list,
      $.footnote,
      $.pb,
      $.ip,
      $.iex,
      $.milestone,
      $.zNameSpace,
      $.esb,
      $.vid,
    ),

    //chapter meta
    _chapterMeta: $ => choice(
      $.ca,
      $.cp,
      $.cd,
      $.cl
    ),
    cl: $ => prec.right(0,seq("\\cl ", repeat1(choice($.text, $._characterMarker)))),
    ca: $ => seq("\\ca ", $.chapterNumber, "\\ca*"),
    cp: $ => prec.right(0,seq("\\cp ", $._headingText)),
    title: $ => choice(
      $.msBlock,
      $.sBlock,
      $.sp,
      $.d,
      $.sdBlock,
      $.r,
      $.mteBlock,
      $.qa,
    ),

    msBlock: $ => prec.right(0, repeat1($.ms)),
    ms: $ => prec.right(0, seq($.msTag, $._headingText, optional($.mr))),
    msTag: $ => seq("\\ms",optional($.numberedLevelMax3), " "),
    paragraph: $ => choice(
      $.p,
      $.m,
      $.po,
      $.pr,
      $.cls,
      $.pmo,
      $.pm,
      $.pmc,
      $.pmr,
      $.piBlock,
      $.mi,
      $.nb,
      $.pc,
      $.phBlock,
      $.b,
    ),

    _paragraphContent: $ => choice(
      $.v,
      $._verseMeta,
      $.verseText,
      $.footnote, 
      $.crossref,
      $.milestone,
      $.zNameSpace,
      $._comments,
      $.ref,
    ),

    p: $ => prec.right(0, seq("\\p", $._spaceOrLine, repeat($._paragraphContent))),
    crossrefText: $ => prec.right(0, repeat1(choice($.text,
      $._nestedCharacterMarker,
      // $._characterMarker,
      $.ref,
      $.fig,
      ))),

    crossref: $ => choice($.x, 
      $.xt_standalone, //using this marker in introtext or cd will not mark it as a crossreference in parse tree
      // $.ex, 
      $.rq,
      ),

    xt_standalone: $ => prec.right(0, seq("\\xt ", optional($.crossrefText),
      optional(choice($.defaultAttribute, $._attributesInCrossref)), 
      "\\xt*")),
    _innerText: $ => prec.right(0, repeat1(choice(
      $.text,
      $._nestedCharacterMarker,
      // $._characterMarker,
      $.footnote,
      $.crossref,
      $.fig,
    ))),

    tl: $ => seq("\\tl", $._spaceOrLine, $._innerText, optional(choice($.defaultAttribute, $._tlAttributes)), "\\tl*"),
    _characterMarker: $ => choice(
      $.add,
      $.bk,
      $.dc,
      $.k,
      $.nd,
      $.ord,
      $.pn,
      $.png,
      $.addpn,
      $.qt,
      $.sig,
      $.sls,
      $.tl,
      $.wj,
      $.em,
      $.bd,
      $.it,
      $.bdit,
      $.no,
      $.sc,
      $.sup,
      $.ndx,
      $.pro,
      $.rb,
      $.w,
      $.wg,
      $.wh,
      $.wa,
      $.wl,
      $.jmp,
      $.ta,
//      $.fig,
      // $.zNameSpace, makes all zNameSpaces part of paragraph content, like milestones
    ),

    _nestedCharacterMarker: $ => choice(
      $.addNested,
      $.bkNested,
      $.dcNested,
      $.kNested,
      $.ndNested,
      $.ordNested,
      $.pnNested,
      $.pngNested,
      $.addpnNested,
      $.qtNested,
      $.sigNested,
      $.slsNested,
      $.tlNested,
      $.wjNested,
      $.taNested,
      $.emNested,
      $.bdNested,
      $.itNested,
      $.bditNested,
      $.noNested,
      $.scNested,
      $.supNested,
      $.ndxNested,
      $.proNested,
      $.rbNested,
      $.wNested,
      $.wgNested,
      $.whNested,
      $.waNested,
      $.wlNested,
      $.jmpNested,
    ),

    fig: $ => seq("\\fig", optional($.text), optional(
      choice($.defaultAttribute, $._figAttributes)), "\\fig*"),
    esb: $ => seq("\\esb",  repeat($._esbContents), "\\esbe"),
    _esbContents: $ => choice( 
      $.cat,
      $.title,
      $.paragraph, // this will allow verse markers also to come withing esb
      $._comments,
      $.poetry,
      $.table,
      $.list,
      $.footnote,
      $.pb,
      $.milestone,
      $.zNameSpace,
      $.ip,
      ),

    category: $=> /[\w\d\s]+/,
    cat: $ => seq("\\cat", $.category, "\\cat*"),
      
    /* *****Attributes******** */

    /* For user defined attributes starting with x */

    customAttribute: $ => seq($.customAttributeName, "=", "\"",optional($.attributeValue),"\""),
    customAttributeName: $ => /x-[\w\d_-]+/,
    attributeValue: $ =>  /[^\\\|"=]+/, //same rule as $.text, with quote and '=' added extra

    /* The default attribute is valid for any marker which normally provide attributes. 
      It would be extracted as default attribute without mentioning the corresponding attribute name */

    _figAttributes: $ => prec.right(0, seq("|", repeat1(choice($.altAttribute, $.srcAttribute, $.sizeAttribute, $.locAttribute, $.copyAttribute, 
      $.refAttribute, $.customAttribute, $.linkAttribute, $.defaultAttribute)))),
    _tlAttributes: $ => seq("|", $.langAttribute),
    altAttribute: $ => seq("alt", "=", '"', optional($.attributeValue), '"'),
    srcAttribute: $ => seq("src", "=", '"', optional($.attributeValue), '"'),
    sizeAttribute: $ => seq("size", "=", '"', optional($.attributeValue), '"'),
    refAttribute: $ => seq("ref", "=", '"', optional($.attributeValue), '"'),
    _attributesInCrossref: $ => prec.right(0,seq("|", repeat1(choice(
      $.linkAttribute, $.customAttribute, $.defaultAttribute))))
  }

});
