tree-sitter-usfm3/test/corpus/test4_chapter_verse.txt
================================================================================
id, c, v markers
================================================================================
\id MAT some other info of file
\c 1
\p
\v 1 verse text
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
cl markers
================================================================================
\id GEN
\c 1
\cl chapter
\p 
\v 1 text
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber)
      (cl
        (text)))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
cl ca cp markers
================================================================================
\id GEN
\h some header
\cl label before chapter
\c 1
\ca 2 \ca*
\cp i
\p
\v 1 text
\v 2 text again
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (hBlock
    (h
      (hTag)
      (text)))
  (chapter
    (cl
      (text))
    (c
      (chapterNumber)
      (ca
        (chapterNumber))
      (cp
        (text)))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
verse number patterns
================================================================================
\id GEN
\c 1
\p
\v 1 text
\v 2a text
\v 2b text
\v 3-4a text
\v 4b text
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))))

================================================================================
va vp markers
================================================================================
\id GEN
\c 1
\p 
\v 1 text - text
\v 2 \va 1a \va* text
\v 3 \va 2 \va*   \vp I-I \vp* text
\v 3 \va 2 \va* \va 2b \va* text
\v 4 \vp I-I \vp* text
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber)
          (va
            (verseNumber)))
        (verseText
          (text))
        (v
          (verseNumber)
          (va
            (verseNumber))
          (vp
            (text)))
        (verseText
          (text))
        (v
          (verseNumber)
          (va
            (verseNumber))
          (va
            (verseNumber)))
        (verseText
          (text))
        (v
          (verseNumber)
          (vp
            (text)))
        (verseText
          (text))))))

================================================================================
ca cp va vp markers occuring within content
================================================================================
\id GEN
\c 1
\p 
\v 1 text - text
\v 2 again text
\cp 1
\p
\v 3 The first verse of after some a represented vp marker
\va 3a \va* with va occuring away from v 
\v 3 some more text \vp I-I \vp* and vp occuring away from v
\ca 1 \ca* 
\p
\v 4 text after a ca that is thrown in the middle of a chapter content
--------------------------------------------------------------------------------

(File
  (book
    (id
      (bookcode)
      (description)))
  (chapter
    (c
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))))
    (cp
      (text))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))
        (va
          (verseNumber))
        (verseText
          (text))
        (v
          (verseNumber))
        (verseText
          (text))
        (vp
          (text))
        (verseText
          (text))))
    (ca
      (chapterNumber))
    (paragraph
      (p
        (v
          (verseNumber))
        (verseText
          (text))))))
